# TinyGames

./: CMakeLists.txt  LICENSE.txt  README.md
app/: CMakelists.txt  main.cpp
cmake/: googletest.cmake
lib/: CMakeLists.txt
lib/Dice/: CMakeLists.txt  Dice.cpp  Dice.h
lib/Dice/test/: CMakeLists.txt  test_dice.cpp
lib/Shifumi/: CMakeLists.txt  Shifumi.cpp  Shifumi.h  ShifumiUtils.h
lib/Shifumi/test/: CMakeLists.txt  test_shifumi.cpp
